# FolderColor

./: meson.build
po/: LINGUAS  POTFILES.in  ru.po
src/: folder-color.py  meson.build
